--- a/conf/application.conf
+++ b/conf/application.conf
@@ -82,7 +82,7 @@ logger.root=ERROR
 logger.play=INFO
 
 # Logger provided to your application:
-logger.application=DEBUG
+logger.application=INFO
 
 
 #Get the original IP in case heroku load balancer messes with configuration
