--- a/conf/application.conf
+++ b/conf/application.conf
@@ -62,7 +62,9 @@ application.global=Global
 # Evolutions
 # ~~~~~
 # You can disable evolutions if needed
-# evolutionplugin=disabled
+
+# for serene-shore-4868-942.herokuapp.com only
+ evolutionplugin=disabled
 
 # Ebean configuration
 # ~~~~~
