akismet re checking

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -102,3 +102,6 @@ include "play-authenticate/mine.conf"
 
 #site.address="http://localhost:9000"
 #site.address="http://gbog.herokuapp.com"
+
+#Akismet
+AkismetApiKey=9414cd858392
