initial prod version

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -46,8 +46,6 @@ application.global=Global
 #db.default.driver=org.postgresql.Driver
 #db.default.url="postgres://umebbhlznjvrhp:mcfClyo8gNrYHNgCUPRH-w6BWd@ec2-50-16-201-126.compute-1.amazonaws.com:5432/dcrj50ndn6u62s"
 #db.default.driver=org.postgresql.Driver
-#db.default.url="postgres://ypbphnxlxgufcx:1soV4d7lb9U8Mvq7k4Dk9gI5Gx@ec2-54-225-89-169.compute-1.amazonaws.com:5432/d8f8m7vb813m6g"
-#db.default.driver=org.postgresql.Driver
 #db.default.url="jdbc:postgresql://localhost:5432/grabongo"
 #db.default.user=postgres
 #db.default.password=1234abcd
@@ -64,7 +62,7 @@ application.global=Global
 # You can disable evolutions if needed
 
 # for serene-shore-4868-942.herokuapp.com only
- evolutionplugin=disabled
+ #evolutionplugin=
 
 # Ebean configuration
 # ~~~~~
@@ -100,8 +98,6 @@ include "play-authenticate/smtp.conf"
 # And play authenticate
 include "play-authenticate/mine.conf"
 
-#site.address="http://localhost:9000"
-#site.address="http://gbog.herokuapp.com"
 
 #Akismet
-AkismetApiKey=9414cd858392
+akismet.api.key=${?AkismetApiKey}
