--- a/conf/play-authenticate/mine.conf
+++ b/conf/play-authenticate/mine.conf
@@ -52,10 +52,10 @@ play-authenticate {
         # if you want to use twitter as an authentication provider.
         # Get the credentials here: https://dev.twitter.com/docs/auth/oauth
         # Remove leading '#' after entering
-        consumerKey="NOx0B83Qx8m7OdLnSUqdQQ"
-        consumerSecret="9pacuQtEnTcYSu6Kk9kHMa1V9YOlOeWptKYYKI"
-        Access_token="1116326791-QlAIKMIrxYaCZD8brzjwb55V9HWerxp1pe3i922"
-        Access_token_secret="26XyMR2UJEHFi5LrHUnO8z4GuhxHlHvoS3I89VhC9TbWR"
+        consumerKey=${?T_APIKey}
+        consumerSecret=${?T_APISecret}
+        Access_token=${?T_Access_token}
+        Access_token_secret=${?T_Access_token_secret}
         
     }
 
@@ -125,8 +125,8 @@ play-authenticate {
         # if you want to use facebook as an authentication provider.
         # Get them here: https://developers.facebook.com/apps
         # Remove leading '#' after entering
-        clientId="192289607614196"
-        clientSecret="ed467a07f55a873f609f5c402622e7cc"
+        clientId=${?F_AppID}
+        clientSecret=${?F_AppSecret}
         scope="email,user_location,user_birthday,user_photos,publish_stream,create_event"
     }
 
