--- a/conf/local.conf
+++ b/conf/local.conf
@@ -1,14 +1,12 @@
 #DB
-#db.default.driver=org.postgresql.Driver
-#db.default.url="jdbc:postgresql://localhost:5432/grabongo"
-#db.default.user=postgres
-#db.default.password=1234abcd
 db.default.driver=org.postgresql.Driver
-db.default.url="postgres://alhuycjjdhznck:tuYkBDUn7Wg2bCeMDTELRvdpKv@ec2-54-243-49-82.compute-1.amazonaws.com:5432/d77s8d0sm962op"
+db.default.url="jdbc:postgresql://localhost:5432/grabongo"
+db.default.user=postgres
+db.default.password=1234abcd
+#db.default.driver=org.postgresql.Driver
+#db.default.url="postgres://ocoiqptbpdupgw:pYccxILSFknuMdMkwqQP4LsXEd@ec2-184-72-231-67.compute-1.amazonaws.com:5432/db6s0o2fln7v04"
 
-#db.default.url="jdbc:postgresql:grabongo2"
-#db.default.user=postgres
-#db.default.password=root
+
 
 # Deadbolt
 include "play-authenticate/deadbolt.conf"
@@ -18,24 +16,17 @@ include "play-authenticate/smtp.conf"
 include "play-authenticate/mine.conf"
 # SITE
 site.address="http://localhost:9000"
-site.captcha.private="6LegKOsSAAAAAM19iX08zyaLauHRqHAGLvUPXrh-"
-site.captcha.public="6LegKOsSAAAAAA1sltEqXN4oE4_bh7GDmGy98s8y"
+site.captcha.private=${?ReCaptcha_Private}
+site.captcha.public=${?ReCaptcha_Public}
 #AMAZON
-aws.access.key="AKIAJDQNGYY64EB5XSIA"
-aws.secret.key="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"
-aws.s3.bucket="com.stag.boozology"
-
-#aws.access.key="AKIAJR345UPP2LVXX6DA"
-#aws.secret.key="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"
-#aws.s3.bucket="booz233"
-
+aws.access.key=${?AWSAccessKeyId}
+aws.secret.key=${?AWSSecretKey}
+aws.s3.bucket="com.gold.byrepo08"
 base.url.format=".s3-us-west-2.amazonaws.com/"
-#DEV#
-#aws.access.key="AKIAIOSFODNN7EXAMPLE"
-#aws.secret.key="wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY"
-#aws.s3.bucket="localhost"
-#base.url.format="/amazonclone/"
-#/DEV#
 
 #STRIPE
 stripe.api.key="sk_test_8JI50t8ReBHpGxYweWpESYyq"
+
+#MADMIMI
+madmimi.api.key=${?MMApiKey}
+madmimi.api.username=${?MMApiUserName}
