--- a/conf/application.conf
+++ b/conf/application.conf
@@ -43,8 +43,8 @@ application.global=Global
 # db.default.jndiName=DefaultDS
 
 #ADDED ON 25TH JUNE 13 FOR POSTGRESQL SUPPORT(T4X)
-#db.default.driver=org.postgresql.Driver
-#db.default.url="postgres://umebbhlznjvrhp:mcfClyo8gNrYHNgCUPRH-w6BWd@ec2-50-16-201-126.compute-1.amazonaws.com:5432/dcrj50ndn6u62s"
+db.default.driver=org.postgresql.Driver
+db.default.url="postgres://yzsvygrcjgyrzi:crboMpwPR4lBx0rYy7UBL7spxc@ec2-23-23-80-55.compute-1.amazonaws.com:5432/d1tauvr9b2dk4r"
 #db.default.driver=org.postgresql.Driver
 #db.default.url="jdbc:postgresql://localhost:5432/grabongo"
 #db.default.user=postgres
