--- a/conf/local.conf
+++ b/conf/local.conf
@@ -1,8 +1,8 @@
 #DB
-db.default.driver=org.postgresql.Driver
-db.default.url="jdbc:postgresql://localhost:5432/grabongo"
-db.default.user=postgres
-db.default.password=1234abcd
+#db.default.driver=org.postgresql.Driver
+#db.default.url="jdbc:postgresql://localhost:5432/grabongo"
+#db.default.user=postgres
+#db.default.password=1234abcd
 #db.default.driver=org.postgresql.Driver
 #db.default.url="postgres://ocoiqptbpdupgw:pYccxILSFknuMdMkwqQP4LsXEd@ec2-184-72-231-67.compute-1.amazonaws.com:5432/db6s0o2fln7v04"
 
