--- a/conf/local.conf
+++ b/conf/local.conf
@@ -1,10 +1,6 @@
 #DB
-#db.default.driver=org.postgresql.Driver
-#db.default.url="jdbc:postgresql://localhost:5432/grabongo"
-#db.default.user=postgres
-#db.default.password=1234abcd
-#db.default.driver=org.postgresql.Driver
-#db.default.url="postgres://ocoiqptbpdupgw:pYccxILSFknuMdMkwqQP4LsXEd@ec2-184-72-231-67.compute-1.amazonaws.com:5432/db6s0o2fln7v04"
+db.default.driver=org.postgresql.Driver
+db.default.url=${?DB_DefaultURL}
 
 
 
@@ -21,7 +17,7 @@ site.captcha.public=${?ReCaptcha_Public}
 #AMAZON
 aws.access.key=${?AWSAccessKeyId}
 aws.secret.key=${?AWSSecretKey}
-aws.s3.bucket="com.gold.byrepo08"
+aws.s3.bucket=${?AWS_S3_Bucket}
 base.url.format=".s3-us-west-2.amazonaws.com/"
 
 #STRIPE
