Boozology Ranking System Changes.

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -91,6 +91,8 @@ include "play-authenticate/smtp.conf"
 # And play authenticate
 include "play-authenticate/mine.conf"
 
-
 #Akismet
 akismet.api.key=${?AkismetApiKey}
+
+#
+pageSize = 10
