evolutions plugin disabled

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -55,7 +55,7 @@ application.global=Global
 # You can disable evolutions if needed
 
 # for serene-shore-4868-942.herokuapp.com only
- #evolutionplugin=
+evolutionplugin=disabled
 
 # Ebean configuration
 # ~~~~~
