--- a/conf/local.conf
+++ b/conf/local.conf
@@ -21,7 +21,7 @@ aws.s3.bucket=${?AWS_S3_Bucket}
 base.url.format=".s3-us-west-2.amazonaws.com/"
 
 #STRIPE
-stripe.api.key="sk_test_8JI50t8ReBHpGxYweWpESYyq"
+stripe.api.key="yourkey"
 
 #MADMIMI
 madmimi.api.key=${?MMApiKey}
